# Parcour-game

./: .gitignore  CMakeLists.txt  commit_b743cb311.txt  first_openGL.cpp  readme.md
res/lvl/: level.json  params.json
res/shaders/: fSprite.cfg  fragment.txt  vSprite.cfg  vertex.txt
settings/: config.json  player.json  server.cfg  server.json  settings.cfg
src/: keys  main.cpp  maths
src/Online/: Client.hpp  NetHandler.hpp
src/Other/: Console.hpp  KeyHandler.hpp
src/Renderer/: AnimatedSprite.hpp  ShaderProgram.hpp  Sprite.hpp  Texture2D.hpp
src/Resources/: AnimSpriteGroup.hpp  LvlParser.hpp  Parser.hpp  ResourceManager.hpp  SpriteGroup.hpp  SpriteLoader.hpp  TextureLoader.hpp  json.hpp
src/Variables/: Camera.hpp  Client.hpp  Cursor.hpp  OpenGL.hpp  Player.hpp  Server.hpp
